syntax = "proto3";
package marketdataservice;
import "modelcommon.proto";
import "clobquote.proto";

option go_package="api";


message MdsConnectRequest {
    string subscriberId = 1;
    int32 maxQuotePerSecond = 2;
}

message MdsSubscribeRequest{
    string subscriberId = 1;
    int32 listingId = 2;
}


service MarketDataService {
    rpc Subscribe(MdsSubscribeRequest) returns (model.Empty) {};
    rpc Connect(MdsConnectRequest) returns (stream model.ClobQuote) {};
}
